fix test cases